fixed some Typecasting issues